--- a/deve_web/deve_web/packages.config
+++ b/deve_web/deve_web/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Google.Protobuf" version="3.5.1" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net452" />
+  <package id="MySql.Data" version="8.0.13" targetFramework="net452" />
 </packages>
