--- a/deve_web/deve_web/deve_web.csproj
+++ b/deve_web/deve_web/deve_web.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Logic\ImageLogic.cs" />
     <Compile Include="Logic\LogInLogic.cs" />
     <Compile Include="Logic\SecurityLogic.cs" />
     <Compile Include="Logic\SingUpLogic.cs" />
