--- a/deve_web/deve_web/deve_web.csproj
+++ b/deve_web/deve_web/deve_web.csproj
@@ -104,6 +104,7 @@
     <Content Include="Views\Login.aspx" />
     <Content Include="Views\pruebas.aspx" />
     <Content Include="Views\Registro.aspx" />
+    <Content Include="Views\Search.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -148,6 +149,13 @@
     </Compile>
     <Compile Include="Views\Registro.aspx.designer.cs">
       <DependentUpon>Registro.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Search.aspx.cs">
+      <DependentUpon>Search.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Search.aspx.designer.cs">
+      <DependentUpon>Search.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
